[package]
name = "order"
version = "0.1.0"
description = "DeLiquid order protocol"
authors = ["Mark (Kailing) Ding Maintainers <markdingkl@gmail.com>"]
repository = "https://github.com/DeLiquid/deliquid-payment-protocols"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.13"
anchor-lang = "0.21.0"

[dev-dependencies]
solana-program-test = "1.9.13"
solana-sdk = "1.9.13"

[lib]
crate-type = ["cdylib", "lib"]
