[package]
name = "deliquid-payment"
version = "0.1.0"
description = "DeLiquid Payment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deliquid_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.9.9"
anchor-lang = "0.21.0"
